V2.3
New Features:
  - armor generator
  - character sheets v1.0
  - new svg logo
  - digital delivery of charsheet handling with sendowl
Changes:
  - nerf low level battery sizes in weapon generator
  - buff 2 handed weapons in weapon generator
  - fix sniper energy damage in weapon generator
  - refactor weapon name generation
  - add error alert to monster builder

V2.2
New Features:
  - monster builder v1.0 beta
Changes:
  - make html files more readable

V2.1
New Features:
  - Sign up to feature notification using formspree
Changes:
  - restructure static files

V2.0
New Features:
  - New responsive side nav menu
  - Homepage
  - Star System Generator v1.0
  - Loot Generator v1.0
  - notify contact form
Changes:
  - Bootstrap version rolled back to 3.3.7

V1.2
New Features:
  - Name Generator
  - 'Remove' button for individual entries
Changes:
  - add share buttons
  - change Swoop Hammer to Longhammer
  - no projectile, only energy damage types for blaster, thrower, and beam rifle
  - scout rifle has lower damage to offset max range
  - add truncheon melee type

v1.1
New Features:
  - generate price
  - add basic melee
  - add advanced melee
  - add acid damage type
  - add new gun types
Changes:
  - add background, pixel stars
  - refactor crit dice
  - Kinetic weapons damage increased compared to Energy weapons (didn't notice this trend in initial generator)