@@ -6,7 +6,8 @@
 <div class="jumbotron">
    <h1>Alternate Character Sheet</h1>
    <p></p>
-   <p class="lead"><strong>Pay what you want to support sfrpgtools</strong> and recieve an alternate character sheet pack designed by me. The sheets come in pdf and are form fillable and printable. Your support helps keep sfrpgtools online and ad free.</p>
+   <p class="lead">Pay what you want to support sfrpgtools and recieve an alternate character sheet pack designed by me.</p>
+   <p>Your support helps keep sfrpgtools online and ad free.</p>
    <p></p>
    <hr>
    <p></p>
@@ -45,20 +46,31 @@
          </div>
          <div class="col-md-8">
             <p>Alternate character sheet pack</p>
-            <label>Pay what you want:</label>
+            <label>Pay what you want</label>
             <div></div>
             <select class="selectpicker show-tick" id="pricePicker" data-style="btn-default" data-size="10">
                <option>$1</option>
                <option>$2</option>
+               <option>$3</option>
+               <option>$4</option>
+               <option>$5</option>
+               <option>$6</option>
+               <option>$7</option>
+               <option>$8</option>
+               <option>$9</option>
+               <option>$10</option>
             </select>
             <div class="buybutton">
-               <a href="https://transactions.sendowl.com/products/77716581/E8FBF228/purchase" rel="nofollow" class="btn btn-grn">BUY NOW</a><script type="text/javascript" src="https://transactions.sendowl.com/assets/sendowl.js" ></script>
+               <a href="https://transactions.sendowl.com/products/77718909/C0A87BDC/purchase" rel="nofollow" class="btn btn-grn">BUY NOW</a><script type="text/javascript" src="https://transactions.sendowl.com/assets/sendowl.js" ></script>
             </div>
+            <p></p>
+
          </div>
       </div>
    </div>
    <hr>
    <p></p>
+   <p>The sheets come in pdf format and are form fillable and printable.</p>
    <p style="margin: 0">This pack contains the following sheets:</p>
    <ul>
       <li>Main character sheet</li>
